@@ -1,3 +1,8 @@
+2015-05-29  Benno Schulenberg <bensberg@justemail.net> (tiny change)
+
+	* info/session.c (display_startup_message): Reword note to 
+	translators.
+
 2015-05-26  Karl Berry  <karl@freefriends.org>
 
 	* doc/texinfo.tex (\setnonasciicharscatcodenonglobal):
